--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
      <p> Veröffentlichungsdatum: 11.11.2014 </p>
 
      <p>ist verfügbar auf: Xbox One / Playstation 4 / PC / Stadia</p>
+
+    <p>Cooles Spiel mit schöner Grafik</p>
      
     <div class="flex">
        
